--- a/node-resume/package.json
+++ b/node-resume/package.json
@@ -3,7 +3,7 @@
     "axios": "^1.8.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^2.0.0",
     "sanitize-filename": "^1.6.3"
   },
   "devDependencies": {
